--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,13 @@
-
-# DATABASE CONNECTION
-# ===============================
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/teacher_web?useSSL=false
+# DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url=jdbc:mysql://localhost:3306/teacherweb
 spring.datasource.username=root
-spring.datasource.password=123456
-# ===============================
-# JPA / HIBERNATE
-# ===============================
+spring.datasource.password=admin
+
+# Hibernate
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
-# Fix Postgres JPA Error:
-# Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-# ==============================================================
-# = Spring Security / Queries for AuthenticationManagerBuilder
-# ==============================================================
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = none
