--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:mysql://localhost:3306/teacherweb
+spring.datasource.url=jdbc:mysql://localhost:3306/teacher_web
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=123456
+#  admin
 
 # Hibernate
 
